Aug 10, 2010 - chris
o fixed a few memory leaks in remote handling

Aug 04, 2010 - chris
o improved hamserver.h documentation; also, all functions in hamserver.h
	no longer return bool but a proper status value

Aug 03, 2010 - chris
o fixed approximate matching over remote connections - the keys were
	not propagated back to the client
o some parameters (HAM_PARAM_DATABASE_NAME, HAM_PARAM_KEYSIZE)
	were not propagated to remote servers when calling ham_get_parameters
	on a remote Database - fixed
o the extended parameters (ham_parameter_t) of ham_env_create_db were
	ignored when operating on a remote Environment - fixed

Aug 02, 2010 - chris
o added a new sample client1.c which can communicate with server1.c

Aug 02, 2010 - chris
o the source repository is now hosted at
	http://github.com/cruppstahl/hamsterdb. The old subversion repository
	is no longer available.

Jul 24, 2010 - chris ---------------------------------------------------
                      release of hamsterdb-1.1.5

Jul 15, 2010 - chris
o finalized the client/server communication; hamsterdb is now able to
	access remote servers. A new header file hamserver.h was added.

Jul 02, 2010 - chris
o HAM_PARAM_GET_STATISTICS was moved to hamsterdb_int.h
o a new sample "server1" was added

Apr 29, 2010 - chris
o ham_env_get_parameters and ham_get_parameters do no longer accept
    NULL pointers as the first parameter; instead, they will fail with
    HAM_INV_PARAMETER

Apr 22, 2010 - chris
o Fixed compilation for MacOSX SnowLeopard (thanks, Olisa)

Apr 13, 2010 - chris ---------------------------------------------------
                      release of hamsterdb-1.1.4

Apr 10, 2010 - chris
o The documentation in the header file was improved and some constants
    were renamed/deprecated

Apr 10, 2010 - chris
o Bugfix - win32 only: with very big databases and unlimited cache, resources
    were exceeded and mmap failed. in this case we'll now fall back to 
    read/write (thanks, Simon)
