@@ -17,10 +17,10 @@
     /* global configuration settings */
     "global": {
         "port": 8080,
-        "enable-error-log": true,
-        "error-log": "/var/log/hamsterd.errors",
-        "enable-access-log": true,
-        "access-log": "/var/log/hamsterd.access"
+        "enable-error-log": false,
+        "error-log": "/var/log/hamsterd.error-log",
+        "enable-access-log": false,
+        "access-log": "/var/log/hamsterd.access-log"
     },
 
     /* list of hamsterdb Environments that are served */
